# Calculator

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  calculator  config.example.json  main.cpp
src/: app.cpp  app.h  calculation_cache.cpp  calculation_cache.h  calculation_service.cpp  calculation_service.h  calculation_storage.cpp  calculation_storage.h  calculation_types.h  calculator.cpp  calculator.h  config.cpp  config.h  libmath.cpp  libmath.h  logger.cpp  logger.h  main.cpp  parser.cpp  parser.h  postgres_connection.cpp  postgres_connection.h  printer.cpp  printer.h
tests/: app_test.cpp
